# th8a-emulator-pico

./: .gitignore  60-openocd.rules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
images/: master-diagram.excalidraw  pink-pico-pinout.drawio
src/: gears.cpp  gears.h  handbrake.cpp  handbrake.h  hid_app.cpp  main.cpp  tusb_config.h
